1.5.0
    o add unit tests
    o no import of subjectProfileTheme, getNLinesYGgplot
    o subjectProfileTextPlot:
      - fix ordering in case paramNameVar is a factor
      - param value lab is used even if not table
      - table output: 
        - records sorted based on value var (especially for factor)
        - fix in case only one param value var is specified
    o subjectProfileEventPlot/subjectProfileLinePlot/subjectProfileIntervalPlot:
      - records sorted based on levels of param var if factor
      - missing values in paramVar or paramNameVar are not filtered
    o subjectProfileEventPlot:
      - fix when paramVarLab not specified for all vars
      - x lab set to time lab by default
    o subjectProfileEvent/subjectProfileLinePlot:
      - shape lab set to color lab if color but not shape var specified
    o subjectProfileLinePlot:
      - remove warning if ref var are missing
    o subjectProfileIntervalPlot
      - correct typo: 'data-by-subject' -> 'data-based'
      - remove rangeSimilarStartEnd parameter (not used)
      - add info on imputation in the caption
    o getPageVar:
      - fix when only one var is specified
1.4.3
    o change default palette for Windows support: u25C0 -> u25C4, u25B6 -> u25BA, u271A -> +, u2605 (star) -> u2666 (diamond), u25EF -> u25CB
1.4.2
    o subjectProfile[Interval|Event|Line]Plot: fix extraction size legend, add space between legend lines 
1.4.1
    o fix unit tests
1.4.0
    o add unit tests figures
    o filterData/subjectProfile[X]Plot/createSubjectProfileReport: new subsetSample parameter
1.3.0
	  o change imports of color palette from 'glpgUtilityFct' to 'glpgStyle'
	  o createSubjectProfileReport: test if input list is empty
1.2.0
    o add vignette with standard patient profiles for SDTM data
    o prepareSubjectProfile: fix in case trans and all missing values for interval plot
    o subjectProfileLinePlot: fix for orientation of paramNameVar labels in ggplot2 >= 3.0.0