@@ -1,7 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/miscellaneous.R
-\name{getNLinesYGgplot}
-\alias{getNLinesYGgplot}
+\name{getNLinesSubjectProfile}
+\alias{getNLinesSubjectProfile}
 \title{Get approximately the number of 'lines' in the vertical direction
 of a \code{\link[ggplot2]{ggplot2}} plot.
 This is extracted from the presence of labels in the y-axis,
@@ -9,7 +9,7 @@ labels and title in the x-axis, general title and number of lines
 in the legend.
 Can be used to specify plot-specific height during the export.}
 \usage{
-getNLinesYGgplot(gg)
+getNLinesSubjectProfile(gg)
 }
 \arguments{
 \item{gg}{\code{\link[ggplot2]{ggplot2}} object}
